# YOLOv8_Sheep_Detection

./: .env.example  .gitignore  LICENSE  README.md  app.py  db.py  pyproject.toml  說明文件.txt
modules/: mouse.py  test_img.py  test_video.py  train.py  utils.py
static/css/: dark_mode.css  home.css  predict.css  style.css  toast.css  train.css
static/js/: auto_typed.js  dropdown_hover.js  toast.js
templates/: home.html  predict.html  train.html
templates/layouts/: base.html
yolo/datasets/: datasets雲端位置.url
yolo/runs/yolov8_ID_30/: yolov8_ID_30_others.7z
yolo/yaml/: yolov8_Example.yaml  yolov8_ID.yaml  yolov8_ID_v2.yaml
測試資料/: 測試資料_雲端位置.url
測試資料/羊隻活動量辨識/: README.md
測試資料/羊隻身分辨識/: README.md
